# narcissus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  auto_build.sh  kzload.elf  load.sh  memory_map.md  register_fields.md
data/04/bootload/: dump
data/05/bootload/: dump
data/06/bootload/: dump
data/06/os/: dump  kozos.elf
data/07/bootload/: dump
data/07/os/: dump
docs/: instructions.md
object_code/02/bootload/: dump
object_code/03/bootload/: dump
object_code/04/bootload/: dump
osbook_03/01/bootload/: Makefile  kzload  kzload.elf  kzload.mot  lib.c  lib.h  main.c
osbook_03/02/bootload/: defines.h  kzload  kzload.elf  kzload.mot  ld.scr  main.c  startup.s
osbook_03/03/bootload/: kzload  kzload.elf  kzload.mot  ld.scr  lib.c  lib.h  main.c  serial.c  serial.h  startup.s
osbook_03/04/bootload/: Makefile  kzload  kzload.elf  kzload.mot  lib.h  main.c  vector.c  xmodem.c
osbook_03/05/bootload/: Makefile  elf.c  elf.h  kzload  kzload.elf  kzload.mot  main.c
osbook_03/06/bootload/: kzload  kzload.elf  kzload.mot  ld.scr  main.c
osbook_03/06/os/: Makefile  kozos  ld.scr  main.c
osbook_03/07/bootload/: intr.S  kzload  kzload.elf  kzload.mot  ld.scr  main.c
osbook_03/07/os/: Makefile  interrupt.c  interrupt.h  kozos  kozos.elf  ld.scr  main.c
osbook_03/08/bootload/: Makefile  dump  intr.S  kzload.mot  xmodem.h
osbook_03/08/os/: Makefile  defines.h  dump  dump_2  kozos  kozos.c  kozos.elf  kozos.h  ld.scr  main.c  serial.c  syscall.c  syscall.h  test08_1.c
osbook_03/09/bootload/: Makefile  dump  ld.scr  serial.c  xmodem.c
osbook_03/09/os/: Makefile  dump  kozos  kozos.c  kozos.elf  kozos.h  main.c  syscall.c  syscall.h  test09_1.c  test09_3.c
osbook_03/10/bootload/: intr.h  vector.c
osbook_03/10/os/: Makefile  dump  kozos  kozos.c  kozos.elf  kozos.h  main.c  syscall.c  syscall.h  test10_1.c
osbook_03/11/bootload/: elf.c  elf.h  serial.h  startup.s
osbook_03/11/os/: Makefile  defines.h  dump  kozos  kozos.c  kozos.elf  kozos.h  main.c  memory.c  serial.h  syscall.c  syscall.h  test11_1.c  test11_2.c
osbook_03/12/bootload/: kzload  kzload.elf
osbook_03/12/os/: Makefile  command.c  consdrv.c  consdrv.h  dump  kozos  kozos.c  kozos.elf  kozos.h  lib.c  main.c  memory.h  syscall.c  syscall.h
src/: debug_main.cpp  main.cpp
src/cpu/: CMakeLists.txt  cpu.cpp  mcu.cpp  sci.cpp
src/gdb/: CMakeLists.txt  gdb.cpp  gdb_server.cpp
src/include/: cpu.hpp  debug.hpp  exception.hpp  gdb.hpp  gdb_server.hpp  mcu.hpp  narcissus.hpp  sci.hpp
src/sci/: CMakeLists.txt  sci.cpp
src/test/: CMakeLists.txt  cpu_test.cpp  sci_test.cpp  xmodem_test.cpp
